digiKam 7.5.0 - Release date: 2022-xx-xx

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 446817 - People entry is written in bold with a new face.
002 ==> 446821 - People Ignored tags numbers are different for r-side and l-side and images only 1.
003 ==> 437260 - Minor discrepancy in scripts.
004 ==> 440927 - Verifying PGP Signature Fails.
005 ==> 432140 - Cannot reassign face to 'ignored'.
006 ==> 422345 - The libQT5WebEngine crash.
007 ==> 441989 - Language selection English only.
008 ==> 444592 - Will digiKam work on MacOS Monterey?
009 ==> 396766 - Can't add collection on removable disk.
010 ==> 443729 - Crash on startup.
011 ==> 434468 - Needs option to move from Unconfirmed to Ignored.
012 ==> 442303 - Marking face as "Ignored" is not saved.
013 ==> 442450 - Mysql-Internal crashes often.
014 ==> 442451 - Mysql-Internal crash.
015 ==> 443394 - Full Path for Tags not saved to image.
016 ==> 443900 - Mysql is very slow over the internet.
017 ==> 444423 - Problem with SQLite when installed on MacOS 11.2.3.
018 ==> 444903 - digiKam not updating image metadata
019 ==> 446815 - People section written 1 new.
020 ==> 446816 - Writing people section.
021 ==> 446818 - Face writting stage.
022 ==> 442400 - Ambiguous Shortcuts on Ctrl+Alt+I.
023 ==> 443544 - Two actions want to use the same shortcut: Open Command Bar and Add Images.
024 ==> 426662 - File naming - extension aware does not work?
025 ==> 329653 - Import in existing collections (year/month).
026 ==> 329921 - Connecting to NAS via ftp invokes error message (no function).
027 ==> 330155 - Crash during assign tags single tag.
028 ==> 330370 - digiKam crash when assigning tag.
029 ==> 330633 - Crash while trying to download.
030 ==> 330644 - Sometime crash when select a tool in the left tools-bar.