@@ -3,6 +3,8 @@ digiKam 7.5.0 - Release date: 2022-xx-xx
 *****************************************************************************************************
 NEW FEATURES:
 
+Bundles: MacOS package use KF5 5.89 and KAPPS 20.12.1 frameworks.
+
 
 *****************************************************************************************************
 BUGFIXES:
